--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>flexy</h1>
+    <ul>
+      <li>cola</li>
+      <li>pepsi</li>
+      <li>fanta</li>
+    </ul>
   </body>
 </html>
